[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["panda2134 <ljypanda@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.1"
fastapi = "^0.89.0"
uvicorn = "^0.16.0"
itsdangerous = "^2.0.1"
motor = "^2.5.1"
Authlib = "^0.15.5"
PyJWT = "^2.3.0"
cryptography = "^36.0.1"
arq = "^0.22"
python-weixin = "^0.5.0"
python-datauri = "^1.1.0"

[tool.poetry.dev-dependencies]
devtools = "^0.8.0"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
